--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,14 +1,35 @@
 <!doctype html>
 
 <html>
+<div class = "container">
 <head>
 	<title>My HCI Friends</title>	
 	<meta charset="utf-8">
-	
+	<script src = "js/jquery-1.11.0.js"></script>
+	<script src = "js/bootstrap.js"></script>
+	<script src = "js/hci-friends.js"></script>
+	<link href="css/bootstrap-theme.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/hci-friends.css" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 	<h1>My HCI Friends</h1>
+	<div id = "friends">
+	{{#each friends}}
+		<div class = "img-responsive" >
+		<a href="image"><img src="{{imageURL}}"></a>
+		<a href="#" id = "name"><h3 >{{name}}</h3></a>
+		<p>{{description}}</p>
+		</div>
+	{{/each}}
+	<div class = "img-responsive" >
+		<a href="image"><img src="http://lorempixel.com/500/500/people/"></a>
+		<h3>Fake friend</h3>
+		<p>All my friends are imaginary.</p>
+	</div>
+	</div>
 
 	<form id="addFriendForm" role="form" method="get" action="/add">
 		<h3>Add a friend</h3>
@@ -23,4 +44,5 @@
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
 </body>
+</div>
 </html>
